--- a/xss/production/test/jquery6.html
+++ b/xss/production/test/jquery6.html
@@ -79,7 +79,7 @@ Released   : 20120325
 </div>
 </tr><tr style="vertical-align:top">
 <div id="acc1">
-            <h3><a href="#">Brightness</a></h3>
+            <h3><a href="#">Brightness  Constrast</a></h3>
 <div id="__div3">
 				<label id="__label1"
 			>
@@ -101,106 +101,56 @@ Released   : 20120325
 			>
 				</div>
 </div>
-            <h3><a href="#">Color</a></h3>
+            <h3><a href="#">Noise</a></h3>
 <div id="__div4">
 				<label id="__label3"
-			>
-					Red
-				</label>
-<br/>
-<br/>
-				<div id="red"
-			>
-				</div>
-<br/>
-				<label id="__label4"
-			>
-					Blue
-				</label>
-<br/>
-<br/>
-				<div id="blue"
-			>
-				</div>
-<br/>
-				<label id="__label5"
-			>
-					Green
-				</label>
-<br/>
-<br/>
-				<div id="green"
-			>
-				</div>
-</div>
-            <h3><a href="#">HSL</a></h3>
-<div id="__div5">
-				<label id="__label6"
-			>
-					Hue
-				</label>
-<br/>
-<br/>
-				<div id="hue"
-			>
-				</div>
-<br/>
-				<label id="__label7"
-			>
-					Saturation
-				</label>
-<br/>
-<br/>
-				<div id="saturation"
-			>
-				</div>
-<br/>
-				<label id="__label8"
-			>
-					Lightness
-				</label>
-<br/>
-<br/>
-				<div id="lightness"
-			>
-				</div>
-</div>
-            <h3><a href="#">Noise</a></h3>
-<div id="__div6">
-				<label id="__label9"
 			>
 					Amount
 				</label>
 <br/>
 <br/>
-				<div id="noise_amount"
+				<div id="noise"
 			>
 				</div>
 <br/>
-				<label id="__label10"
+				<label id="__label4"
 			>
-					Strength
+					Density
 				</label>
 <br/>
 <br/>
-				<div id="noise_strength"
+				<div id="density"
 			>
 				</div>
 <br/>
-<br/>
             <div id="mono">
-        <input id="mono_input" type="checkbox" name="__div6"/>
+        <input id="mono_input" type="checkbox" name="__div4"/>
         <label id="mono_label" for="mono_input"> Mono </label>
             </div>
 </div>
-            <h3><a href="#">Blur</a></h3>
-<div id="__div7">
-				<input id="blur_apply"
-						type="button" 
-						name="blur_apply" 
-						value="Apply" 
-					>
-				</input>
+            <h3><a href="#">Sepia</a></h3>
+<div id="__div5">
+				<label id="__label5"
+			>
+					Amount
+				</label>
+<br/>
+<br/>
+				<div id="sepia"
+			>
+				</div>
+</div>
+            <h3><a href="#">Oil Painting</a></h3>
+<div id="__div6">
+				<label id="__label6"
+			>
+					Range
+				</label>
+<br/>
+<br/>
+				<div id="range"
+			>
+				</div>
 </div>
 </div>
 </tr>
@@ -251,57 +201,34 @@ Released   : 20120325
 			var __label3 = $("#__label3");
 			var __br6 = $("#__br6");
 			var __br7 = $("#__br7");
-			var red = $("#red");
+			var noise = $("#noise");
 			var __br8 = $("#__br8");
 			var __label4 = $("#__label4");
 			var __br9 = $("#__br9");
 			var __br10 = $("#__br10");
-			var blue = $("#blue");
+			var density = $("#density");
 			var __br11 = $("#__br11");
+			var mono = $("#mono").button();
+			var __div5 = $("#__div5");
 			var __label5 = $("#__label5");
 			var __br12 = $("#__br12");
 			var __br13 = $("#__br13");
-			var green = $("#green");
-			var __div5 = $("#__div5");
+			var sepia = $("#sepia");
+			var __div6 = $("#__div6");
 			var __label6 = $("#__label6");
 			var __br14 = $("#__br14");
 			var __br15 = $("#__br15");
-			var hue = $("#hue");
-			var __br16 = $("#__br16");
-			var __label7 = $("#__label7");
-			var __br17 = $("#__br17");
-			var __br18 = $("#__br18");
-			var saturation = $("#saturation");
-			var __br19 = $("#__br19");
-			var __label8 = $("#__label8");
-			var __br20 = $("#__br20");
-			var __br21 = $("#__br21");
-			var lightness = $("#lightness");
-			var __div6 = $("#__div6");
-			var __label9 = $("#__label9");
-			var __br22 = $("#__br22");
-			var __br23 = $("#__br23");
-			var noise_amount = $("#noise_amount");
-			var __br24 = $("#__br24");
-			var __label10 = $("#__label10");
-			var __br25 = $("#__br25");
-			var __br26 = $("#__br26");
-			var noise_strength = $("#noise_strength");
-			var __br27 = $("#__br27");
-			var __br28 = $("#__br28");
-			var mono = $("#mono").button();
-			var __div7 = $("#__div7");
-			var blur_apply = $("#blur_apply").button();
+			var range = $("#range");
 			var image_container = $("#image_container");
 		preset_apply.click( function() { 
 			var image_data = application.get_image_data();
-preset_apply.disabled = true;
+JQUComponent.set_enabled(preset_apply, false);
 preset_apply.attr("value", "Applying...");
 var __worker1 = new Worker('__asynch1.js');
 __worker1.onmessage = function(message) {
 if (message.data.id == '__wwmsg1') {
 var image_data = message.data.image_data;application.set_image_data(image_data);
-preset_apply.disabled = false;
+JQUComponent.set_enabled(preset_apply, true);
 preset_apply.attr("value", "Apply Stack");
 }
 }
@@ -311,91 +238,63 @@ __worker1.postMessage({mypreset : transformer,image : image_data,});
                 fillSpace: true,
             });
             brightness.slider({
+                min: -100,
+                max: 100,
+                value: 0,
 		    change: function(event, ui) { 
-	     transformer.b_filter.brightness = brightness.slider( "option", "value" );
+	     transformer.b_filter.set_amount(brightness.slider( "option", "value" ) / 100);
 application.apply_filter(transformer.b_filter);
 		    },
 	    });
             constrast.slider({
-                value: 50,
+                min: 0,
+                max: 200,
+                value: 100,
 		    change: function(event, ui) { 
-	     transformer.b_filter.constrast = constrast.slider( "option", "value" ) / 100;
-application.apply_filter(transformer.b_filter);
-		    },
-	    });
-            red.slider({
-                min: -100,
-                max: 100,
-                value: 0,
-		    change: function(event, ui) { 
-	     transformer.c_filter.red = red.slider( "option", "value" ) / 100;
+	     transformer.c_filter.set_amount(constrast.slider( "option", "value" ) / 100);
 application.apply_filter(transformer.c_filter);
 		    },
 	    });
-            blue.slider({
-                min: -100,
+            noise.slider({
+                min: 0,
                 max: 100,
                 value: 0,
 		    change: function(event, ui) { 
-	     transformer.c_filter.blue = blue.slider( "option", "value" ) / 100;
-application.apply_filter(transformer.c_filter);
-		    },
-	    });
-            green.slider({
-                min: -100,
-                max: 100,
-                value: 0,
-		    change: function(event, ui) { 
-	     transformer.c_filter.green = green.slider( "option", "value" ) / 100;
-application.apply_filter(transformer.c_filter);
-		    },
-	    });
-            hue.slider({
-                min: -180,
-                max: 180,
-                value: 0,
-		    change: function(event, ui) { 
-	     transformer.hsl_filter.hue = hue.slider( "option", "value" );
-application.apply_filter(transformer.hsl_filter);
-		    },
-	    });
-            saturation.slider({
-                min: -100,
-                max: 100,
-                value: 0,
-		    change: function(event, ui) { 
-	     transformer.hsl_filter.saturation = saturation.slider( "option", "value" );
-application.apply_filter(transformer.hsl_filter);
-		    },
-	    });
-            lightness.slider({
-                min: -100,
-                max: 100,
-                value: 0,
-		    change: function(event, ui) { 
-	     transformer.hsl_filter.lightness = lightness.slider( "option", "value" );
-application.apply_filter(transformer.hsl_filter);
-		    },
-	    });
-            noise_amount.slider({
-		    change: function(event, ui) { 
-	     transformer.n_filter.amount = noise_amount.slider( "option", "value" ) / 100;
+	     transformer.n_filter.set_amount(noise.slider( "option", "value" ));
 application.apply_filter(transformer.n_filter);
 		    },
 	    });
-            noise_strength.slider({
+            density.slider({
+                min: 0,
+                max: 100,
+                value: 0,
 		    change: function(event, ui) { 
-	     transformer.n_filter.strength = noise_strength.slider( "option", "value" ) / 100;
+	     transformer.n_filter.set_density(density.slider( "option", "value" ) / 100);
 application.apply_filter(transformer.n_filter);
 		    },
 	    });
 		mono.change( function() { 
-			transformer.n_filter.mono = mono.value;
+			transformer.n_filter.set_monochrome(mono.value);
 application.apply_filter(transformer.n_filter);
 		});
-		blur_apply.click( function() { 
-			application.apply_filter(transformer.blur_filter);
-		});
+            sepia.slider({
+                min: 0,
+                max: 30,
+                value: 0,
+		    change: function(event, ui) { 
+	     transformer.s_filter.set_amount(sepia.slider( "option", "value" ));
+application.apply_filter(transformer.s_filter);
+		    },
+	    });
+            range.slider({
+                min: 0,
+                max: 5,
+                value: 0,
+		    change: function(event, ui) { 
+	     transformer.o_filter.set_range(range.slider( "option", "value" ));
+application.apply_filter(transformer.o_filter);
+		    },
+	    });
 	application.set_image = function(id) 
 	{
 		var image = document.getElementById(id);
@@ -436,20 +335,35 @@ application.set_image_data(imgdata);
 		}
 	    var transformer = new jsmanip.Preset() ;
 			transformer.b_filter = new jsmanip.Brightness(
-		null,transformer);		
+		0,transformer);		
 		if(!transformer.filters)
 			transformer.filters = [];
 		transformer.filters.push(transformer.b_filter);
+			transformer.c_filter = new jsmanip.Contrast(
+		1,transformer);		
+		if(!transformer.filters)
+			transformer.filters = [];
+		transformer.filters.push(transformer.c_filter);
+			transformer.color_filter = new jsmanip.RGBadjust(
+		1,1,1,transformer);		
+		if(!transformer.filters)
+			transformer.filters = [];
+		transformer.filters.push(transformer.color_filter);
+			transformer.s_filter = new jsmanip.Sepia(
+		0,transformer);		
+		if(!transformer.filters)
+			transformer.filters = [];
+		transformer.filters.push(transformer.s_filter);
 			transformer.n_filter = new jsmanip.Noise(
 		null,null,null,transformer);		
 		if(!transformer.filters)
 			transformer.filters = [];
 		transformer.filters.push(transformer.n_filter);
-			transformer.blur_filter = new jsmanip.Blur(
-		null,transformer);		
+			transformer.o_filter = new jsmanip.Oil(
+		0,transformer);		
 		if(!transformer.filters)
 			transformer.filters = [];
-		transformer.filters.push(transformer.blur_filter);
+		transformer.filters.push(transformer.o_filter);
                     if (application.init)
                         application.init();
 </script>
