--- a/xss/production/test/cube_ui.html
+++ b/xss/production/test/cube_ui.html
@@ -357,13 +357,9 @@ g_sequence_manager);
 	}
 	);
             set_material_alpha(plane_material, 50);
-            camera_1.position.y = 0;
+            camera_1.position.y = 150;
             camera_1.position.z = 500;
-            cube_1.position.x = -150;
-            cube_1.position.y = 50;
-            set_rotation_x(plane_1.rotation, -90);
-            plane_1.position.x = -150;
-            plane_1.position.y = -100;
+            cube_1.position.y = 150;
             application.x_target_rotation = 0;
             application.x_target_rotation_on_mouse_down = 0;
             application.mouse_x = 0;
@@ -393,7 +389,7 @@ application.y_target_rotation = application.y_target_rotation_on_mouse_down + (a
 	application.events.addListener("update", function()
 	{    
 		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
-set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
+set_rotation_y(plane_1.rotation, get_rotation_y(cube_1.rotation));
 set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
 	}
 	);
